--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.manila">
     <!-- To access Google+ APIs: -->
-    <uses-permission android:name="android.permission.CAMERA"></uses-permission>
-    <uses-permission-sdk-23 android:name="android.permission.CAMERA"></uses-permission-sdk-23>
-
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission-sdk-23 android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -16,8 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".LandmarkInfoActivity"></activity>
-        <activity android:name=".ScanCodeActivity"/>
+        <activity android:name=".RewardsActivity"></activity>
+        <activity android:name=".LandmarkInfoActivity" />
+        <activity android:name=".ScanCodeActivity" />
         <activity android:name=".SignUp" />
         <activity android:name=".SignIn" />
         <activity android:name=".Start" />
